tests/gabc-dump/should-fail/unclosed-slur.gabc
name: unclosed slur;
%%
(c4) f(f[uslur:0{]) (::)
